PLtp2/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Grammar

Rule 0     S' -> Programa
Rule 1     Programa -> Operacoes
Rule 2     Operacoes -> Operacoes Operacao
Rule 3     Operacoes -> <empty>
Rule 4     Operacao -> BEGINDECLARES
Rule 5     Operacao -> ENDDECLARES
Rule 6     Operacao -> READ VAR
Rule 7     Operacao -> READ VAR [ EXP ]
Rule 8     Operacao -> READ VAR [ EXP ] [ EXP ]
Rule 9     Operacao -> IF ( CONDICOES )
Rule 10    CONDICOES -> CONDICAO
Rule 11    CONDICOES -> NOT CONDICOES
Rule 12    CONDICOES -> ( CONDICOES )
Rule 13    CONDICOES -> CONDICOES AND CONDICOES
Rule 14    CONDICOES -> CONDICOES OR CONDICOES
Rule 15    Operacao -> REPEAT
Rule 16    Operacao -> UNTIL ( CONDICOES )
Rule 17    Operacao -> FOR1 FOR3
Rule 18    FOR3 -> FOR2 Operacao ) DO
Rule 19    FOR2 -> CONDICOES ;
Rule 20    Operacao -> ENDFOR
Rule 21    Operacao -> WHILEI ( CONDICOES ) DO
Rule 22    WHILEI -> WHILE
Rule 23    FOR1 -> FOR ( Operacao ;
Rule 24    Operacao -> ENDWHILE
Rule 25    CONDICAO -> EXP = = EXP
Rule 26    CONDICAO -> EXP ! = EXP
Rule 27    CONDICAO -> EXP < EXP
Rule 28    CONDICAO -> EXP > EXP
Rule 29    CONDICAO -> EXP < = EXP
Rule 30    CONDICAO -> EXP > = EXP
Rule 31    Operacao -> ELSE Operacoes
Rule 32    Operacao -> ENDIF
Rule 33    Operacao -> INT VAR
Rule 34    Operacao -> INT VAR = EXP
Rule 35    Operacao -> ARRAYINT VAR [ NUM ]
Rule 36    Operacao -> ARRAYINT VAR [ NUM ] [ NUM ]
Rule 37    Operacao -> PRINT EXP
Rule 38    Operacao -> ATR VAR = EXP
Rule 39    Operacao -> ATR VAR [ EXP ] = EXP
Rule 40    Operacao -> ATR VAR [ EXP ] [ EXP ] = EXP
Rule 41    Operacao -> PRINTS STRING
Rule 42    EXP -> EXP + TERMO
Rule 43    EXP -> EXP - TERMO
Rule 44    EXP -> TERMO
Rule 45    TERMO -> TERMO * FACTOR
Rule 46    TERMO -> TERMO / FACTOR
Rule 47    TERMO -> FACTOR
Rule 48    FACTOR -> ( EXP )
Rule 49    FACTOR -> NUM
Rule 50    FACTOR -> SIGNEDNUM
Rule 51    FACTOR -> VAR
Rule 52    FACTOR -> VAR [ EXP ]
Rule 53    FACTOR -> VAR [ EXP ] [ EXP ]

Terminals, with rules where they appear

!                    : 26
(                    : 9 12 16 21 23 48
)                    : 9 12 16 18 21 48
*                    : 45
+                    : 42
-                    : 43
/                    : 46
;                    : 19 23
<                    : 27 29
=                    : 25 25 26 29 30 34 38 39 40
>                    : 28 30
AND                  : 13
ARRAYINT             : 35 36
ATR                  : 38 39 40
BEGINDECLARES        : 4
DO                   : 18 21
ELSE                 : 31
ENDDECLARES          : 5
ENDFOR               : 20
ENDIF                : 32
ENDWHILE             : 24
FOR                  : 23
IF                   : 9
INT                  : 33 34
NOT                  : 11
NUM                  : 35 36 36 49
OR                   : 14
PRINT                : 37
PRINTS               : 41
READ                 : 6 7 8
REPEAT               : 15
SIGNEDNUM            : 50
STRING               : 41
UNTIL                : 16
VAR                  : 6 7 8 33 34 35 36 38 39 40 51 52 53
WHILE                : 22
[                    : 7 8 8 35 36 36 39 40 40 52 53 53
]                    : 7 8 8 35 36 36 39 40 40 52 53 53
error                : 

Nonterminals, with rules where they appear

CONDICAO             : 10
CONDICOES            : 9 11 12 13 13 14 14 16 19 21
EXP                  : 7 8 8 25 25 26 26 27 27 28 28 29 29 30 30 34 37 38 39 39 40 40 40 42 43 48 52 53 53
FACTOR               : 45 46 47
FOR1                 : 17
FOR2                 : 18
FOR3                 : 17
Operacao             : 2 18 23
Operacoes            : 1 2 31
Programa             : 0
TERMO                : 42 43 44 45 46
WHILEI               : 21

Parsing method: LALR

state 0

    (0) S' -> . Programa
    (1) Programa -> . Operacoes
    (2) Operacoes -> . Operacoes Operacao
    (3) Operacoes -> .

    BEGINDECLARES   reduce using rule 3 (Operacoes -> .)
    ENDDECLARES     reduce using rule 3 (Operacoes -> .)
    READ            reduce using rule 3 (Operacoes -> .)
    IF              reduce using rule 3 (Operacoes -> .)
    REPEAT          reduce using rule 3 (Operacoes -> .)
    UNTIL           reduce using rule 3 (Operacoes -> .)
    ENDFOR          reduce using rule 3 (Operacoes -> .)
    ENDWHILE        reduce using rule 3 (Operacoes -> .)
    ELSE            reduce using rule 3 (Operacoes -> .)
    ENDIF           reduce using rule 3 (Operacoes -> .)
    INT             reduce using rule 3 (Operacoes -> .)
    ARRAYINT        reduce using rule 3 (Operacoes -> .)
    PRINT           reduce using rule 3 (Operacoes -> .)
    ATR             reduce using rule 3 (Operacoes -> .)
    PRINTS          reduce using rule 3 (Operacoes -> .)
    FOR             reduce using rule 3 (Operacoes -> .)
    WHILE           reduce using rule 3 (Operacoes -> .)
    $end            reduce using rule 3 (Operacoes -> .)

    Programa                       shift and go to state 1
    Operacoes                      shift and go to state 2

state 1

    (0) S' -> Programa .



state 2

    (1) Programa -> Operacoes .
    (2) Operacoes -> Operacoes . Operacao
    (4) Operacao -> . BEGINDECLARES
    (5) Operacao -> . ENDDECLARES
    (6) Operacao -> . READ VAR
    (7) Operacao -> . READ VAR [ EXP ]
    (8) Operacao -> . READ VAR [ EXP ] [ EXP ]
    (9) Operacao -> . IF ( CONDICOES )
    (15) Operacao -> . REPEAT
    (16) Operacao -> . UNTIL ( CONDICOES )
    (17) Operacao -> . FOR1 FOR3
    (20) Operacao -> . ENDFOR
    (21) Operacao -> . WHILEI ( CONDICOES ) DO
    (24) Operacao -> . ENDWHILE
    (31) Operacao -> . ELSE Operacoes
    (32) Operacao -> . ENDIF
    (33) Operacao -> . INT VAR
    (34) Operacao -> . INT VAR = EXP
    (35) Operacao -> . ARRAYINT VAR [ NUM ]
    (36) Operacao -> . ARRAYINT VAR [ NUM ] [ NUM ]
    (37) Operacao -> . PRINT EXP
    (38) Operacao -> . ATR VAR = EXP
    (39) Operacao -> . ATR VAR [ EXP ] = EXP
    (40) Operacao -> . ATR VAR [ EXP ] [ EXP ] = EXP
    (41) Operacao -> . PRINTS STRING
    (23) FOR1 -> . FOR ( Operacao ;
    (22) WHILEI -> . WHILE

    $end            reduce using rule 1 (Programa -> Operacoes .)
    BEGINDECLARES   shift and go to state 4
    ENDDECLARES     shift and go to state 5
    READ            shift and go to state 6
    IF              shift and go to state 7
    REPEAT          shift and go to state 8
    UNTIL           shift and go to state 9
    ENDFOR          shift and go to state 11
    ENDWHILE        shift and go to state 13
    ELSE            shift and go to state 14
    ENDIF           shift and go to state 15
    INT             shift and go to state 16
    ARRAYINT        shift and go to state 17
    PRINT           shift and go to state 18
    ATR             shift and go to state 19
    PRINTS          shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22

    Operacao                       shift and go to state 3
    FOR1                           shift and go to state 10
    WHILEI                         shift and go to state 12

state 3

    (2) Operacoes -> Operacoes Operacao .

    BEGINDECLARES   reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ENDDECLARES     reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    READ            reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    IF              reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    REPEAT          reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    UNTIL           reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ENDFOR          reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ENDWHILE        reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ELSE            reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ENDIF           reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    INT             reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ARRAYINT        reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    PRINT           reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ATR             reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    PRINTS          reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    FOR             reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    WHILE           reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    $end            reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    )               reduce using rule 2 (Operacoes -> Operacoes Operacao .)
    ;               reduce using rule 2 (Operacoes -> Operacoes Operacao .)


state 4

    (4) Operacao -> BEGINDECLARES .

    BEGINDECLARES   reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ENDDECLARES     reduce using rule 4 (Operacao -> BEGINDECLARES .)
    READ            reduce using rule 4 (Operacao -> BEGINDECLARES .)
    IF              reduce using rule 4 (Operacao -> BEGINDECLARES .)
    REPEAT          reduce using rule 4 (Operacao -> BEGINDECLARES .)
    UNTIL           reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ENDFOR          reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ENDWHILE        reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ELSE            reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ENDIF           reduce using rule 4 (Operacao -> BEGINDECLARES .)
    INT             reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ARRAYINT        reduce using rule 4 (Operacao -> BEGINDECLARES .)
    PRINT           reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ATR             reduce using rule 4 (Operacao -> BEGINDECLARES .)
    PRINTS          reduce using rule 4 (Operacao -> BEGINDECLARES .)
    FOR             reduce using rule 4 (Operacao -> BEGINDECLARES .)
    WHILE           reduce using rule 4 (Operacao -> BEGINDECLARES .)
    $end            reduce using rule 4 (Operacao -> BEGINDECLARES .)
    )               reduce using rule 4 (Operacao -> BEGINDECLARES .)
    ;               reduce using rule 4 (Operacao -> BEGINDECLARES .)


state 5

    (5) Operacao -> ENDDECLARES .

    BEGINDECLARES   reduce using rule 5 (Operacao -> ENDDECLARES .)
    ENDDECLARES     reduce using rule 5 (Operacao -> ENDDECLARES .)
    READ            reduce using rule 5 (Operacao -> ENDDECLARES .)
    IF              reduce using rule 5 (Operacao -> ENDDECLARES .)
    REPEAT          reduce using rule 5 (Operacao -> ENDDECLARES .)
    UNTIL           reduce using rule 5 (Operacao -> ENDDECLARES .)
    ENDFOR          reduce using rule 5 (Operacao -> ENDDECLARES .)
    ENDWHILE        reduce using rule 5 (Operacao -> ENDDECLARES .)
    ELSE            reduce using rule 5 (Operacao -> ENDDECLARES .)
    ENDIF           reduce using rule 5 (Operacao -> ENDDECLARES .)
    INT             reduce using rule 5 (Operacao -> ENDDECLARES .)
    ARRAYINT        reduce using rule 5 (Operacao -> ENDDECLARES .)
    PRINT           reduce using rule 5 (Operacao -> ENDDECLARES .)
    ATR             reduce using rule 5 (Operacao -> ENDDECLARES .)
    PRINTS          reduce using rule 5 (Operacao -> ENDDECLARES .)
    FOR             reduce using rule 5 (Operacao -> ENDDECLARES .)
    WHILE           reduce using rule 5 (Operacao -> ENDDECLARES .)
    $end            reduce using rule 5 (Operacao -> ENDDECLARES .)
    )               reduce using rule 5 (Operacao -> ENDDECLARES .)
    ;               reduce using rule 5 (Operacao -> ENDDECLARES .)


state 6

    (6) Operacao -> READ . VAR
    (7) Operacao -> READ . VAR [ EXP ]
    (8) Operacao -> READ . VAR [ EXP ] [ EXP ]

    VAR             shift and go to state 23


state 7

    (9) Operacao -> IF . ( CONDICOES )

    (               shift and go to state 24


state 8

    (15) Operacao -> REPEAT .

    BEGINDECLARES   reduce using rule 15 (Operacao -> REPEAT .)
    ENDDECLARES     reduce using rule 15 (Operacao -> REPEAT .)
    READ            reduce using rule 15 (Operacao -> REPEAT .)
    IF              reduce using rule 15 (Operacao -> REPEAT .)
    REPEAT          reduce using rule 15 (Operacao -> REPEAT .)
    UNTIL           reduce using rule 15 (Operacao -> REPEAT .)
    ENDFOR          reduce using rule 15 (Operacao -> REPEAT .)
    ENDWHILE        reduce using rule 15 (Operacao -> REPEAT .)
    ELSE            reduce using rule 15 (Operacao -> REPEAT .)
    ENDIF           reduce using rule 15 (Operacao -> REPEAT .)
    INT             reduce using rule 15 (Operacao -> REPEAT .)
    ARRAYINT        reduce using rule 15 (Operacao -> REPEAT .)
    PRINT           reduce using rule 15 (Operacao -> REPEAT .)
    ATR             reduce using rule 15 (Operacao -> REPEAT .)
    PRINTS          reduce using rule 15 (Operacao -> REPEAT .)
    FOR             reduce using rule 15 (Operacao -> REPEAT .)
    WHILE           reduce using rule 15 (Operacao -> REPEAT .)
    $end            reduce using rule 15 (Operacao -> REPEAT .)
    )               reduce using rule 15 (Operacao -> REPEAT .)
    ;               reduce using rule 15 (Operacao -> REPEAT .)


state 9

    (16) Operacao -> UNTIL . ( CONDICOES )

    (               shift and go to state 25


state 10

    (17) Operacao -> FOR1 . FOR3
    (18) FOR3 -> . FOR2 Operacao ) DO
    (19) FOR2 -> . CONDICOES ;
    (10) CONDICOES -> . CONDICAO
    (11) CONDICOES -> . NOT CONDICOES
    (12) CONDICOES -> . ( CONDICOES )
    (13) CONDICOES -> . CONDICOES AND CONDICOES
    (14) CONDICOES -> . CONDICOES OR CONDICOES
    (25) CONDICAO -> . EXP = = EXP
    (26) CONDICAO -> . EXP ! = EXP
    (27) CONDICAO -> . EXP < EXP
    (28) CONDICAO -> . EXP > EXP
    (29) CONDICAO -> . EXP < = EXP
    (30) CONDICAO -> . EXP > = EXP
    (42) EXP -> . EXP + TERMO
    (43) EXP -> . EXP - TERMO
    (44) EXP -> . TERMO
    (45) TERMO -> . TERMO * FACTOR
    (46) TERMO -> . TERMO / FACTOR
    (47) TERMO -> . FACTOR
    (48) FACTOR -> . ( EXP )
    (49) FACTOR -> . NUM
    (50) FACTOR -> . SIGNEDNUM
    (51) FACTOR -> . VAR
    (52) FACTOR -> . VAR [ EXP ]
    (53) FACTOR -> . VAR [ EXP ] [ EXP ]

    NOT             shift and go to state 30
    (               shift and go to state 31
    NUM             shift and go to state 35
    SIGNEDNUM       shift and go to state 36
    VAR             shift and go to state 37

    FOR3                           shift and go to state 26
    FOR2                           shift and go to state 27
    CONDICOES                      shift and go to state 28
    CONDICAO                       shift and go to state 29
    EXP                            shift and go to state 32
    TERMO                          shift and go to state 33
    FACTOR                         shift and go to state 34

state 11

    (20) Operacao -> ENDFOR .

    BEGINDECLARES   reduce using rule 20 (Operacao -> ENDFOR .)
    ENDDECLARES     reduce using rule 20 (Operacao -> ENDFOR .)
    READ            reduce using rule 20 (Operacao -> ENDFOR .)
    IF              reduce using rule 20 (Operacao -> ENDFOR .)
    REPEAT          reduce using rule 20 (Operacao -> ENDFOR .)
    UNTIL           reduce using rule 20 (Operacao -> ENDFOR .)
    ENDFOR          reduce using rule 20 (Operacao -> ENDFOR .)
    ENDWHILE        reduce using rule 20 (Operacao -> ENDFOR .)
    ELSE            reduce using rule 20 (Operacao -> ENDFOR .)
    ENDIF           reduce using rule 20 (Operacao -> ENDFOR .)
    INT             reduce using rule 20 (Operacao -> ENDFOR .)
    ARRAYINT        reduce using rule 20 (Operacao -> ENDFOR .)
    PRINT           reduce using rule 20 (Operacao -> ENDFOR .)
    ATR             reduce using rule 20 (Operacao -> ENDFOR .)
    PRINTS          reduce using rule 20 (Operacao -> ENDFOR .)
    FOR             reduce using rule 20 (Operacao -> ENDFOR .)
    WHILE           reduce using rule 20 (Operacao -> ENDFOR .)
    $end            reduce using rule 20 (Operacao -> ENDFOR .)
    )               reduce using rule 20 (Operacao -> ENDFOR .)
    ;               reduce using rule 20 (Operacao -> ENDFOR .)


state 12

    (21) Operacao -> WHILEI . ( CONDICOES ) DO

    (               shift and go to state 38


state 13

    (24) Operacao -> ENDWHILE .

    BEGINDECLARES   reduce using rule 24 (Operacao -> ENDWHILE .)
    ENDDECLARES     reduce using rule 24 (Operacao -> ENDWHILE .)
    READ            reduce using rule 24 (Operacao -> ENDWHILE .)
    IF              reduce using rule 24 (Operacao -> ENDWHILE .)
    REPEAT          reduce using rule 24 (Operacao -> ENDWHILE .)
    UNTIL           reduce using rule 24 (Operacao -> ENDWHILE .)
    ENDFOR          reduce using rule 24 (Operacao -> ENDWHILE .)
    ENDWHILE        reduce using rule 24 (Operacao -> ENDWHILE .)
    ELSE            reduce using rule 24 (Operacao -> ENDWHILE .)
    ENDIF           reduce using rule 24 (Operacao -> ENDWHILE .)
    INT             reduce using rule 24 (Operacao -> ENDWHILE .)
    ARRAYINT        reduce using rule 24 (Operacao -> ENDWHILE .)
    PRINT           reduce using rule 24 (Operacao -> ENDWHILE .)
    ATR             reduce using rule 24 (Operacao -> ENDWHILE .)
    PRINTS          reduce using rule 24 (Operacao -> ENDWHILE .)
    FOR             reduce using rule 24 (Operacao -> ENDWHILE .)
    WHILE           reduce using rule 24 (Operacao -> ENDWHILE .)
    $end            reduce using rule 24 (Operacao -> ENDWHILE .)
    )               reduce using rule 24 (Operacao -> ENDWHILE .)
    ;               reduce using rule 24 (Operacao -> ENDWHILE .)


state 14

    (31) Operacao -> ELSE . Operacoes
    (2) Operacoes -> . Operacoes Operacao
    (3) Operacoes -> .

    BEGINDECLARES   reduce using rule 3 (Operacoes -> .)
    ENDDECLARES     reduce using rule 3 (Operacoes -> .)
    READ            reduce using rule 3 (Operacoes -> .)
    IF              reduce using rule 3 (Operacoes -> .)
    REPEAT          reduce using rule 3 (Operacoes -> .)
    UNTIL           reduce using rule 3 (Operacoes -> .)
    ENDFOR          reduce using rule 3 (Operacoes -> .)
    ENDWHILE        reduce using rule 3 (Operacoes -> .)
    ELSE            reduce using rule 3 (Operacoes -> .)
    ENDIF           reduce using rule 3 (Operacoes -> .)
    INT             reduce using rule 3 (Operacoes -> .)
    ARRAYINT        reduce using rule 3 (Operacoes -> .)
    PRINT           reduce using rule 3 (Operacoes -> .)
    ATR             reduce using rule 3 (Operacoes -> .)
    PRINTS          reduce using rule 3 (Operacoes -> .)
    FOR             reduce using rule 3 (Operacoes -> .)
    WHILE           reduce using rule 3 (Operacoes -> .)
    $end            reduce using rule 3 (Operacoes -> .)
    )               reduce using rule 3 (Operacoes -> .)
    ;               reduce using rule 3 (Operacoes -> .)

    Operacoes                      shift and go to state 39

state 15

    (32) Operacao -> ENDIF .

    BEGINDECLARES   reduce using rule 32 (Operacao -> ENDIF .)
    ENDDECLARES     reduce using rule 32 (Operacao -> ENDIF .)
    READ            reduce using rule 32 (Operacao -> ENDIF .)
    IF              reduce using rule 32 (Operacao -> ENDIF .)
    REPEAT          reduce using rule 32 (Operacao -> ENDIF .)
    UNTIL           reduce using rule 32 (Operacao -> ENDIF .)
    ENDFOR          reduce using rule 32 (Operacao -> ENDIF .)
    ENDWHILE        reduce using rule 32 (Operacao -> ENDIF .)
    ELSE            reduce using rule 32 (Operacao -> ENDIF .)
    ENDIF           reduce using rule 32 (Operacao -> ENDIF .)
    INT             reduce using rule 32 (Operacao -> ENDIF .)
    ARRAYINT        reduce using rule 32 (Operacao -> ENDIF .)
    PRINT           reduce using rule 32 (Operacao -> ENDIF .)
    ATR             reduce using rule 32 (Operacao -> ENDIF .)
    PRINTS          reduce using rule 32 (Operacao -> ENDIF .)
    FOR             reduce using rule 32 (Operacao -> ENDIF .)
    WHILE           reduce using rule 32 (Operacao -> ENDIF .)
    $end            reduce using rule 32 (Operacao -> ENDIF .)
    )               reduce using rule 32 (Operacao -> ENDIF .)
    ;               reduce using rule 32 (Operacao -> ENDIF .)


state 16

    (33) Operacao -> INT . VAR
    (34) Operacao -> INT . VAR = EXP

    VAR             shift and go to state 40


state 17

    (35) Operacao -> ARRAYINT . VAR [ NUM ]
    (36) Operacao -> ARRAYINT . VAR [ NUM ] [ NUM ]

    VAR             shift and go to state 41


state 18

    (37) Operacao -> PRINT . EXP
    (42) EXP -> . EXP + TERMO
    (43) EXP -> . EXP - TERMO
    (44) EXP -> . TERMO
    (45) TERMO -> . TERMO * FACTOR
    (46) TERMO -> . TERMO / FACTOR
    (47) TERMO -> . FACTOR
    (48) FACTOR -> . ( EXP )
    (49) FACTOR -> . NUM
    (50) FACTOR -> . SIGNEDNUM
    (51) FACTOR -> . VAR
    (52) FACTOR -> . VAR [ EXP ]
    (53) FACTOR -> . VAR [ EXP ] [ EXP ]

    (               shift and go to state 43
    NUM             shift and go to state 35
    SIGNEDNUM       shift and go to state 36
    VAR             shift and go to state 37

    EXP                            shift and go to state 42
    TERMO                          shift and go to state 33
    FACTOR                         shift and go to state 34

state 19

    (38) Operacao -> ATR . VAR = EXP
    (39) Operacao -> ATR . VAR [ EXP ] = EXP
    (40) Operacao -> ATR . VAR [ EXP ] [ EXP ] = EXP

    VAR             shift and go to state 44


state 20

    (41) Operacao -> PRINTS . STRING

    STRING          shift and go to state 45


state 21

    (23) FOR1 -> FOR . ( Operacao ;

    (               shift and go to state 46


state 22

    (22) WHILEI -> WHILE .

    (               reduce using rule 22 (WHILEI -> WHILE .)


state 23

    (6) Operacao -> READ VAR .
    (7) Operacao -> READ VAR . [ EXP ]
    (8) Operacao -> READ VAR . [ EXP ] [ EXP ]

    BEGINDECLARES   reduce using rule 6 (Operacao -> READ VAR .)
    ENDDECLARES     reduce using rule 6 (Operacao -> READ VAR .)
    READ            reduce using rule 6 (Operacao -> READ VAR .)
    IF              reduce using rule 6 (Operacao -> READ VAR .)
    REPEAT          reduce using rule 6 (Operacao -> READ VAR .)
    UNTIL           reduce using rule 6 (Operacao -> READ VAR .)
    ENDFOR          reduce using rule 6 (Operacao -> READ VAR .)
    ENDWHILE        reduce using rule 6 (Operacao -> READ VAR .)
    ELSE            reduce using rule 6 (Operacao -> READ VAR .)
    ENDIF           reduce using rule 6 (Operacao -> READ VAR .)
    INT             reduce using rule 6 (Operacao -> READ VAR .)
    ARRAYINT        reduce using rule 6 (Operacao -> READ VAR .)
    PRINT           reduce using rule 6 (Operacao -> READ VAR .)
    ATR             reduce using rule 6 (Operacao -> READ VAR .)
    PRINTS          reduce using rule 6 (Operacao -> READ VAR .)
    FOR             reduce using rule 6 (Operacao -> READ VAR .)
    WHILE           reduce using rule 6 (Operacao -> READ VAR .)
    $end            reduce using rule 6 (Operacao -> READ VAR .)
    )               reduce using rule 6 (Operacao -> READ VAR .)
    ;               reduce using rule 6 (Operacao -> READ VAR .)
    [               shift and go to state 47


state 24

    (9) Operacao -> IF ( . CONDICOES )
    (10) CONDICOES -> . CONDICAO
    (11) CONDICOES -> . NOT CONDICOES
    (12) CONDICOES -> . ( CONDICOES )
    (13) CONDICOES -> . CONDICOES AND CONDICOES
    (14) CONDICOES -> . CONDICOES OR CONDICOES
    (25) CONDICAO -> . EXP = = EXP
    (26) CONDICAO -> . EXP ! = EXP
    (27) CONDICAO -> . EXP < EXP
    (28) CONDICAO -> . EXP > EXP
    (29) CONDICAO -> . EXP < = EXP
    (30) CONDICAO -> . EXP > = EXP
    (42) EXP -> . EXP + TERMO
    (43) EXP -> . EXP - TERMO
    (44) EXP -> . TERMO
    (45) TERMO -> . TERMO * FACTOR
    (46) TERMO -> . TERMO / FACTOR
    (47) TERMO -> . FACTOR
    (48) FACTOR -> . ( EXP )
    (49) FACTOR -> . NUM
    (50) FACTOR -> . SIGNEDNUM
    (51) FACTOR -> . VAR
    (52) FACTOR -> . VAR [ EXP ]
    (53) FACTOR -> . VAR [ EXP ] [ EXP ]

    NOT             shift and go to state 30
    (               shift and go to state 31
    NUM             shift and go to state 35
    SIGNEDNUM       shift and go to state 36
    VAR             shift and go to state 37

    CONDICOES                      shift and go to state 48
    CONDICAO                       shift and go to state 29
    EXP                            shift and go to state 32
    TERMO                          shift and go to state 33
    FACTOR                         shift and go to state 34

state 25

    (16) Operacao -> UNTIL ( . CONDICOES )
    (10) CONDICOES -> . CONDICAO
    (11) CONDICOES -> . NOT CONDICOES
    (12) CONDICOES -> . ( CONDICOES )
    (13) CONDICOES -> . CONDICOES AND CONDICOES
    (14) CONDICOES -> . CONDICOES OR CONDICOES
    (25) CONDICAO -> . EXP = = EXP
    (26) CONDICAO -> . EXP ! = EXP
    (27) CONDICAO -> . EXP < EXP
    (28) CONDICAO -> . EXP > EXP
    (29) CONDICAO -> . EXP < = EXP
    (30) CONDICAO -> . EXP > = EXP
    (42) EXP -> . EXP + TERMO
    (43) EXP -> . EXP - TERMO
    (44) EXP -> . TERMO
    (45) TERMO -> . TERMO * FACTOR
    (46) TERMO -> . TERMO / FACTOR
    (47) TERMO -> . FACTOR
    (48) FACTOR -> . ( EXP )
    (49) FACTOR -> . NUM
    (50) FACTOR -> . SIGNEDNUM
    (51) FACTOR -> . VAR
    (52) FACTOR -> . VAR [ EXP ]
    (53) FACTOR -> . VAR [ EXP ] [ EXP ]

    NOT             shift and go to state 30
    (               shift and go to state 31
    NUM             shift and go to state 35
    SIGNEDNUM       shift and go to state 36
    VAR             shift and go to state 37

    CONDICOES                      shift and go to state 49
    CONDICAO                       shift and go to state 29
    EXP                            shift and go to state 32
    TERMO                          shift and go to state 33
    FACTOR                         shift and go to state 34

state 26

    (17) Operacao -> FOR1 FOR3 .

    BEGINDECLARES   reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ENDDECLARES     reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    READ            reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    IF              reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    REPEAT          reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    UNTIL           reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ENDFOR          reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ENDWHILE        reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ELSE            reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ENDIF           reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    INT             reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ARRAYINT        reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    PRINT           reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ATR             reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    PRINTS          reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    FOR             reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    WHILE           reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    $end            reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    )               reduce using rule 17 (Operacao -> FOR1 FOR3 .)
    ;               reduce using rule 17 (Operacao -> FOR1 FOR3 .)


state 27

    (18) FOR3 -> FOR2 . Operacao ) DO
    (4) Operacao -> . BEGINDECLARES
    (5) Operacao -> . ENDDECLARES
    (6) Operacao -> . READ VAR
    (7) Operacao -> . READ VAR [ EXP ]
    (8) Operacao -> . READ VAR [ EXP ] [ EXP ]
    (9) Operacao -> . IF ( CONDICOES )
    (15) Operacao -> . REPEAT
    (16) Operacao -> . UNTIL ( CONDICOES )
    (17) Operacao -> . FOR1 FOR3
    (20) Operacao -> . ENDFOR
    (21) Operacao -> . WHILEI ( CONDICOES ) DO
    (24) Operacao -> . ENDWHILE
    (31) Operacao -> . ELSE Operacoes
    (32) Operacao -> . ENDIF
    (33) Operacao -> . INT VAR
    (34) Operacao -> . INT VAR = EXP
    (35) Operacao -> . ARRAYINT VAR [ NUM ]
    (36) Operacao -> . ARRAYINT VAR [ NUM ] [ NUM ]
    (37) Operacao -> . PRINT EXP
    (38) Operacao -> . ATR VAR = EXP
    (39) Operacao -> . ATR VAR [ EXP ] = EXP
    (40) Operacao -> . ATR VAR [ EXP ] [ EXP ] = EXP
    (41) Operacao -> . PRINTS STRING
    (23) FOR1 -> . FOR ( Operacao ;
    (22) WHILEI -> . WHILE

    BEGINDECLARES   shift and go to state 4
    ENDDECLARES     shift and go to state 5
    READ            shift and go to state 6
    IF              shift and go to state 7
    REPEAT          shift and go to state 8
    UNTIL           shift and go to state 9
    ENDFOR          shift and go to state 11
    ENDWHILE        shift and go to state 13
    ELSE            shift and go to state 14
    ENDIF           shift and go to state 15
    INT             shift and go to state 16
    ARRAYINT        shift and go to state 17
    PRINT           shift and go to state 18
    ATR             shift and go to state 19
    PRINTS          shift and go to state 20
    FOR             shift and go to state 21
    WHILE           shift and go to state 22

    Operacao                       shift and go to state 50
    FOR1                           shift and go to state 10
    WHILEI                         shift and go to state 12

state 28

    (19) FOR2 -> CONDICOES . ;
    (13) CONDICOES -> CONDICOES . AND CONDICOES
    (14) CONDICOES -> CONDICOES . OR CONDICOES

    ;               shift and go to state 51
    AND             shift and go to state 52
    OR              shift and go to state 53


state 29

    (10) CONDICOES -> CONDICAO .

    ;               reduce using rule 10 (CONDICOES -> CONDICAO .)
    AND             reduce using rule 10 (CONDICOES -> CONDICAO .)
    OR              reduce using rule 10 (CONDICOES -> CONDICAO .)
    )               reduce using rule 10 (CONDICOES -> CONDICAO .)


state 30
